Fix the slider text on small monitors

--- a/www.racktivity.com/themes/landing/static/css/custom.css
+++ b/www.racktivity.com/themes/landing/static/css/custom.css
@@ -158,8 +158,8 @@ header a { color: #FFF; }
 .blue-part { width: 84%; }
 .callus-menu li { padding: 0px 2px; }
 .carousel-caption h1 { color: #FFFFFF; font-family: 'neotechalt-bold'; text-shadow: none; font-size: 25px !important; }
-.carousel-caption h4 { font-size: 18px !important; color: #4c4c4c; text-shadow: none; max-width: 690px; line-height: 34px; margin: 15px 0 11px 0; }
-.carousel-caption span { font-size: 14px !important; color: #333; text-shadow: none; font-family: 'neotechalt-bold'; display: block; }
+.carousel-caption h4 { font-size: 18px !important;color: #F1F1F1; text-shadow: none; max-width: 690px; line-height: 34px; margin: 15px 0 11px 0;}
+.carousel-caption span { font-size: 14px !important;color: #FFF; text-shadow: none; font-family: 'neotechalt-bold'; display: block;}
 .carousel-caption p { font-size: 15px !important; text-shadow: none; font-style: italic; float: left; display: inherit; max-width: 1110px; }
 .carousel-caption input { display: block; border: 0; background: rgba(33, 166, 223, 0.8); padding: 8px 30px; margin: 160px 0 20px 0; -webkit-border-radius: 5px; -moz-border-radius: 5px; border-radius: 5px; font-size: 11px; }
 .arrow-down { display: none; }
